## Process this file with automake to produce Makefile.in

pkginclude_HEADERS = 	types.h \
			settings.h \
			synth.h \
			event.h \
			seq.h \
			seqbind.h \
			shell.h \
			sfont.h \
			ramsfont.h \
			audio.h \
			midi.h \
			log.h \
			misc.h \
			version.h \
			voice.h \
			mod.h \
			gen.h 

EXTRA_DIST = version.h.in CMakeLists.txt 
DISTCLEANFILES = version.h
